# SystemC

./: CMakeLists.txt  README.md
Practice/: CMakeCache.txt  Makefile  Practice  cmake_install.cmake
costum_sig/: CMakeCache.txt  CMakeLists.txt  Makefile  Signal  cmake_install.cmake
ex2/: CMakeCache.txt  Makefile  cmake_install.cmake  exercise2  exor.h  exor_main.cpp  mon.h  nand.h  nand_main.cpp  stim.h  traceFindwithClock.vcd
ex3/: CMakeCache.txt  Makefile  cmake_install.cmake  exercise3  state_machine.cpp  state_machine.h
ex4/: CMakeCache.txt  Makefile  cmake_install.cmake  exercise4  main.cpp  place.h  subnet.h  transition.h
ex5/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  exercise5  kpn.cpp  kpn.h  main.cpp
ex6/: CMakeCache.txt  Makefile  bus.h  cmake_install.cmake  exercise6  main.cpp  memory.h  processor.h
ex8/: CMakeCache.txt  Makefile  cmake_install.cmake  exercise8
fifo/: CMakeCache.txt  CMakeLists.txt  Fifo  Makefile  cmake_install.cmake  main.cpp
